correccion comunicacion administrador